--- a/snake/index.html
+++ b/snake/index.html
@@ -1,36 +1,26 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Snake</title>
-<link rel="stylesheet" href="style.css">
+    <title>Snake</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h1>🐍 Snake</h1>
 
-<div id="menu">
+<div id="difficultyMenu">
     <h2>Choisis la difficulté</h2>
     <button onclick="startGame('easy')">Facile</button>
-    <button onclick="startGame('normal')">Normal</button>
+    <button onclick="startGame('medium')">Moyen</button>
     <button onclick="startGame('hard')">Difficile</button>
-    <br><br>
-    <a href="../index.html">⬅ Menu principal</a>
 </div>
 
-<div id="game" class="hidden">
-    <canvas id="canvas"></canvas>
+<canvas id="gameCanvas"></canvas>
+
+<div id="hud">
     <p>Score : <span id="score">0</span></p>
-
-    <button onclick="restart()">🔄 Rejouer</button>
-    <button onclick="backToDifficulty()">⬅ Menu</button>
-</div>
-
-<div id="gameover" class="hidden">
-    <h2>💀 Game Over</h2>
-    <p>Score final : <span id="finalScore">0</span></p>
-    <button onclick="restart()">🔄 Rejouer</button>
-    <button onclick="backToDifficulty()">⬅ Menu</button>
+    <button onclick="restartGame()">🔁 Rejouer</button>
+    <button onclick="goToMenu()">⬅ Menu</button>
 </div>
 
 <script src="snake.js"></script>
