--- a/labyrinthe/index.html
+++ b/labyrinthe/index.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Labyrinthe Killer</title>
-<link rel="stylesheet" href="style.css">
+    <title>Labyrinthe Killer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <h1>Labyrinthe Killer</h1>
+<div id="hud">❤️ Vie : 3 | 💰 Gold : 0</div>
 
-<div id="hud">
-    ❤️ Vie : <span id="hp">3</span> |
-    💰 Gold : <span id="gold">0</span>
-</div>
+<canvas id="mazeCanvas"></canvas>
 
-<canvas id="canvas" width="400" height="400"></canvas>
-
-<div id="gameover" class="hidden">
-    <h2>Game Over</h2>
-    <button onclick="restart()">Rejouer</button>
-    <button onclick="location.href='../index.html'">Menu</button>
-</div>
-
-<script src="../save.js"></script>
 <script src="labyrinthe.js"></script>
 
 </body>
 </html>
+
 
